checkGroups refactor